--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 										</article>
 <article>
 											<a href="MD-PHD.html" class="image"><img src="images/Black1.jpg" alt="" /></a>
-											<h3>MD-PDH</h3>
+											<h3>MD-PHD</h3>
 
 											<ul class="actions">
 												<li><a href="MD-PHD.html" class="button">More</a></li>
