--- a/QuebecEN.html
+++ b/QuebecEN.html
@@ -336,7 +336,7 @@ Frequently Asked Questions About University Programs  </p> </b>
 									<div class="mini-posts">
 										<article>
 											<a href="Authors.html" class="image"><img src="images/write.jpg" alt="" /></a>
-											<p>Meet all 74 Authors of this Book!</p>
+											<p>Meet all the Authors of this Book!</p>
 										</article>
 										<article>
 											<a href="https://drive.google.com/drive/folders/1S2sjlv6AZC1sosObg3ly4tl52JgPNOkT?usp=sharing" class="image"><img src="images/pic08.jpg" alt="" /></a>
