--- a/Authors.html
+++ b/Authors.html
@@ -265,13 +265,13 @@
 											<p>Meet the Authors to this Book!</p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
+											<a href="https://drive.google.com/drive/folders/1S2sjlv6AZC1sosObg3ly4tl52JgPNOkT?usp=sharing" class="image"><img src="images/pic08.jpg" alt="" /></a>
 											<p>**Extra Resources**</p>
 										</article>
 
 									</div>
 									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
+										<li><a href="https://drive.google.com/drive/folders/1S2sjlv6AZC1sosObg3ly4tl52JgPNOkT?usp=sharing" class="button">More</a></li>
 									</ul>
 								</section>
 
