--- a/Authors.html
+++ b/Authors.html
@@ -106,11 +106,18 @@
 
 
 <h2> Quebec</h2>
-<ul class="alt"><li> Samantha Bizimungu, Western University School of Medicine DONT KNOW WHICH QUEBEC SCHOOLS THEY GO TO </li>
+<ul class="alt"><li> Samantha Bizimungu, University of Montreal School of Medicine </li>
+<li> Kelly Djeuda, University of Laval School of Medicine</li>
+<li> Kerlysha-Danielle Guerrier, University of Sherbrooke School of Medicine 
 <li>Menal Huroy, McGill School of Medicine  </li>
-<li>Jannah Kone, University of Calgary School of Medicine </li>	
-<li>Meridith Remy , University of Toronto School of Medicine </li>
- </ul>
+<li>Jannah Koné, University of Laval School of Medicine </li>	
+<li>Victoire Kpadé, McGill School of Medicine </li>
+<li>Edward Percy, University of Sherbrooke School of Medicine </li>
+<li>Meridith Remy , University of Laval School of Medicine </li>
+<li> Stacey Sarkodie, University of Sherbrooke School of Medicine </li>
+<li>Valéry-Drice Tchomba, University of Sherbrooke School of Medicine </li>
+<li>Jamilah Temfack, University of Laval School of Medicine </li>									
+</ul>
 
 <hr class="major" />
 
@@ -120,9 +127,9 @@
 <li>Matthew Daniel, University of Toronto School of Medicine </li>	
 <li>Aya Ebdalla, University of Toronto School of Medicine </li>
 <li> GB Olarewaju, University of British Columbia School of Medicine </li>
-<li> Meredith Remy, Laval School of Medicine ***</li>
+<li> Meredith Remy, University of Laval School of Medicine </li>
 <li>Bolade Shipeolu, University of Toronto School of Medicine</li> 
-<li>Ola Sobodu, University of Toronto School of Medicine*** </li>
+<li>Ola Sobodu, Dalhousie School of Medicine </li>
  </ul>
 <hr class="major" />
 
@@ -136,8 +143,8 @@
 <h2> Finances</h2>
 <ul class="alt"><li> Samantha Bizimungu, Western University School of Medicine </li>
 <li>Martire, Brad University of Montreal School of Medicine***  </li>
-<li>Chantal Phillips, University of Calgary School of Medicine </li>	
-<li>Tyrell Wees , University of Toronto School of Medicine ***</li>
+<li>Chantal Phillips, University of Toronto School of Medicine </li>	
+<li>Tyrell Wees , University of Montreal School of Medicine ***</li>
 
  </ul>
 <hr class="major" />
@@ -168,7 +175,7 @@
 
 <h2> Book Design & Resources </h2>
 <ul class="alt"><li> Victoire Kpade, McGill University </li>
-<li> Mayur Tailor, University of Toronto School of Pharmacy </li>
+<li> Mayur Tailor, University of Waterloo School of Pharmacy </li>
 
  </ul>
 <hr class="major" />
@@ -178,15 +185,18 @@
 <li>Ihsan Albakri, University of Waterloo </li>
 <li>Ranie Ahmed, University of Toronto </li>
 <li>Hasna Besher, University of Waterloo  </li>
-<li>Banan Bukhari </li>
+<li>Banan Bukhari, University of Waterloo </li>
+<li> Adam Christopher, University of Toronto School of Medicine </li>
 <li>Nadine Ghanem, University of Waterloo  </li>
-<li>Syeda Javeria Hasan </li>
+<li>Syeda Javeria Hasan, University of Waterloo </li>
 <li>Waleed Ishak, University of Toronto  </li>
 <li>Omer Jamal, University of Toronto  </li>
-<li>Ashna Kapur </li>
-<li>Ayo Lekuti </li>
-<li>Claudia Martin </li>
-<li>Manahil Sheikh </li>
+<li>Ashna Kapur, University of Waterloo </li>
+<li>Ayo Lekuti, University of Waterloo </li>
+<li>Claudia Martin, University of Waterloo </li>
+<li> Tate Newmarch, University of Toronto School of Medicine </li>
+<li> Nelson Saddler, University of Toronto School of Medicine </li>
+<li>Manahil Sheikh, University of Waterloo </li>
  </ul>
 
 <hr class="major" />
