--- a/Authors.html
+++ b/Authors.html
@@ -135,7 +135,7 @@
 
 <h2> Accepting Your Offer</h2>
 <ul class="alt"><li> Andy Afenu , University of Toronto School of Medicine </li>
-<li>Jamilah Temfack, University of Ottawa School of Medicine *** </li>
+<li>Jamilah Temfack, University of Laval School of Medicine </li>
  </ul>	
 
 <hr class="major" />
