--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <ol>
  <li> Deciding if medicine is right for you </li>
 <li> What you need to do in your undergraduate studies</li>
- <li> what’s needed for the application </li> 
- <li> what to consider when accepting an offer of admission. </li> 
+ <li> What’s needed for the application </li> 
+ <li> What to consider when accepting an offer of admission. </li> 
 </ol>
 <p>This book will not get you into medical school, but will instead provide you the information needed for you to get there on your own. You can think of this book like a map. Everyone starts from a different place, and in this book, we hope toguide you to where you want to be, regardless of where you currently are in your own journey. Each chapter is designed to describe a different stage in the process and to support you throughout your journey. The entire book is written through a collaboration of <b>70+ medical students</b> from <b>all 17</b> medical schools across Canada. </p>
 
