--- a/MCAT.html
+++ b/MCAT.html
@@ -271,7 +271,16 @@
 
 </ul>	
 
-<h3> Youtube Channels & Videos </h3>	
+<h3> Youtube Channels & Videos </h3>
+
+<ul>
+	<li>A number of YouTube channels serve as free resources for material review </li>
+<li>These channels are not made specifically for the MCAT but can help to explain tested topics</li>
+<li>Osmosis </li>
+<li>AK Lectures </li>
+<li>Science Simplified </li>
+<li>Leah4Sci </li>
+									</ul>
 
 
 <hr class="major" /> 
