--- a/Authors.html
+++ b/Authors.html
@@ -86,7 +86,7 @@
 <h2> MCAT</h2>
 <ul class="alt"><li> Mobolaji Adeolu , Western University School of Medicine </li>
 <li>Kien Crosse, University of Ottawa School of Medicine  </li>
-<li>Josh Herman, University of Calgary School of Medicine </li>	
+<li>Josh Herman, University of Toronto School of Medicine </li>	
 <li>Matthew McGarr  , University of Toronto School of Medicine </li>
 <li> Iku Nwosu , Queen's University School of Medicine </li>
 <li>Quinn Robertson-Stove, University of Saskatchewan School of Medicine</li>
@@ -141,8 +141,8 @@
 <hr class="major" />
 
 <h2> Finances</h2>
-<ul class="alt"><li> Samantha Bizimungu, Western University School of Medicine </li>
-<li>Martire, Brad University of Montreal School of Medicine***  </li>
+<ul class="alt"><li> Samantha Bizimungu, University of Montreal School of Medicine </li>
+<li>Martire, Brad University of Laval School of Medicine  </li>
 <li>Chantal Phillips, University of Toronto School of Medicine </li>	
 <li>Tyrell Wees , University of Montreal School of Medicine ***</li>
 
