--- a/Authors.html
+++ b/Authors.html
@@ -121,9 +121,22 @@
 
 <hr class="major" />
 
+<h2> MD-PHD</h2>									
+<ul class="alt">
+	<li> Alexandra Florescu, University of Toronto School of Medicine </li>
+	<li> Camilla Giovino, University of Toronto School of Medicine </li>
+	<li> Vinyas Harish, University of Toronto School of Medicine </li>
+	<li> Jillian Mackin, University of Toronto School of Medicine </li> 
+	<li> Jessica Petricca, University of Toronto School of Medicine</li> 
+	<li> Patrick Steadman, University of Toronto School of Medicine</li> 
+
+ </ul>									
+									
+									
+<hr class="major" />
 <h2> Interviewing</h2>
 <ul class="alt"><li> Gian Agtarap , University of Toronto School of Medicine </li>
-<li>Kianna Cadogen, University of Toronto School of Medicine**** </li>
+<li>Kianna Cadogen, University of Manitoba School of Medicine </li>
 <li>Matthew Daniel, University of Toronto School of Medicine </li>	
 <li>Aya Ebdalla, University of Toronto School of Medicine </li>
 <li> GB Olarewaju, University of British Columbia School of Medicine </li>
