--- a/Authors.html
+++ b/Authors.html
@@ -78,7 +78,7 @@
 <li>Lina Elfaki, University of Toronto School of Medicine  </li>
 <li>Sarah Khan, University of Toronto School of Medicine </li>	
 <li>Josh Desmond Nash  , University of Saskatchewan School of Medicine </li>
-<li>  Ibrahim Sadiq , University of Calgary School of Medicine </li>
+<li>  Ibrahim Sadiq , University of Alberta School of Medicine </li>
 <li>Geoffrey Sem, University of Toronto School of Medicine</li>
 <li>Matthew Sem, University of Toronto School of Medicine</li> </ul>								
 <hr class="major" />
