--- a/Authors.html
+++ b/Authors.html
@@ -187,7 +187,7 @@
 <hr class="major" />
 
 <h2> Book Design & Resources </h2>
-<ul class="alt"><li> Victoire Kpade, McGill University </li>
+<ul class="alt"><li> Victoire Kpade, McGill University School of Medicine</li>
 <li> Mayur Tailor, University of Waterloo School of Pharmacy </li>
 
  </ul>
