--- a/Authors.html
+++ b/Authors.html
@@ -78,7 +78,7 @@
 <li>Lina Elfaki, University of Toronto School of Medicine  </li>
 <li>Sarah Khan, University of Toronto School of Medicine </li>	
 <li>Josh Desmond Nash  , University of Saskatchewan School of Medicine </li>
-<li>  Ibrahim Sadiq , University of Alberta School of Medicine </li>
+<li> Ibrahim Sadiq , University of Alberta School of Medicine </li>
 <li>Geoffrey Sem, University of Toronto School of Medicine</li>
 <li>Matthew Sem, University of Toronto School of Medicine</li> </ul>								
 <hr class="major" />
@@ -195,9 +195,11 @@
 
 <h2> Copy Editors </h2>
 <ul class="alt"><li> Lama Abdallah, University of Waterloo </li>
+<li> Seana Adams, University of Toronto School of Medicine </li>
 <li>Ihsan Albakri, University of Waterloo </li>
 <li>Ranie Ahmed, University of Toronto </li>
 <li>Hasna Besher, University of Waterloo  </li>
+<li> Krish Bilimoria, University of Toronto School of Medicine </li>
 <li>Banan Bukhari, University of Waterloo </li>
 <li> Adam Christopher, University of Toronto School of Medicine </li>
 <li>Nadine Ghanem, University of Waterloo  </li>
