--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
 										<ul class="actions">
-											<li><a href="https://drive.google.com/file/d/1kI_RLXqtBPwVIRG554u1-nbJmfoH3mPx/view?usp=sharing" class="button big">PDF Download Here</a></li>
+											<li><a href="#">PDF Download COMING SOON</a></li>
 										</ul>
 									</div>
 									<span class="image object">
