--- a/MD-PHD.html
+++ b/MD-PHD.html
@@ -236,7 +236,7 @@ Vinyas  </p>
 									<div class="mini-posts">
 										<article>
 											<a href="Authors.html" class="image"><img src="images/write.jpg" alt="" /></a>
-											<p>Meet all 74 Authors of this Book!</p>
+											<p>Come meet the authors of this book!</p>
 										</article>
 										<article>
 											<a href="https://drive.google.com/drive/folders/1S2sjlv6AZC1sosObg3ly4tl52JgPNOkT?usp=sharing" class="image"><img src="images/pic08.jpg" alt="" /></a>
