--- a/Authors.html
+++ b/Authors.html
@@ -155,7 +155,7 @@
 <ul class="alt"><li> Samantha Bizimungu, University of Montreal School of Medicine </li>
 <li>Martire, Brad University of Laval School of Medicine  </li>
 <li>Chantal Phillips, University of Toronto School of Medicine </li>	
-<li>Tyrell Wees , University of Montreal School of Medicine ***</li>
+<li>Tyrell Wees , University of Saskatchewan School of Medicine </li>
 
  </ul>
 <hr class="major" />
