--- a/Authors.html
+++ b/Authors.html
@@ -87,7 +87,7 @@
 <li>Josh Herman, University of Toronto School of Medicine </li>	
 <li>Matthew McGarr  , University of Toronto School of Medicine </li>
 <li> Iku Nwosu , Queen's University School of Medicine </li>
-<li>Quinn Robertson-Stove, University of Saskatchewan School of Medicine</li>
+<li>Quinn Robertson-Stovel, University of Manitoba School of Medicine</li>
 <li>Alessandro Volpe, University of Toronto School of Medicine</li> </ul>	
 
 <hr class="major" />
@@ -135,7 +135,7 @@
 <h2> Interviewing</h2>
 <ul class="alt"><li> Gian Agtarap , University of Toronto School of Medicine </li>
 <li>Kianna Cadogen, University of Manitoba School of Medicine </li>
-<li>Matthew Daniel, University of Toronto School of Medicine </li>	
+<li>Mathew Daniel, University of Manitoba School of Medicine </li>	
 <li>Aya Ebdalla, University of Toronto School of Medicine </li>
 <li> GB Olarewaju, University of British Columbia School of Medicine </li>
 <li> Meredith Remy, University of Laval School of Medicine </li>
