--- a/Authors.html
+++ b/Authors.html
@@ -72,7 +72,7 @@
 <hr class="major" />
 
 <h2> Research & Extracurriculars</h2>
-<ul class="alt"><li> Maryam Bagherzadeh, University of Toronto School of Medicine*** </li>
+<ul class="alt"><li> Maryam Bagherzadeh, Queen's University School of Medicine </li>
 <li>Lina Elfaki, University of Toronto School of Medicine  </li>
 <li>Sarah Khan, University of Toronto School of Medicine </li>	
 <li>Josh Desmond Nash  , University of Saskatchewan School of Medicine </li>
