--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
 										<ul class="actions">
-											<li><a href="#">PDF Download COMING SOON</a></li>
+											<li><a href="https://drive.google.com/file/d/10yg-FJ_5dBru5uOsq_ty4Fsmy9HWqC3S/view?usp=sharing">DOWNLOAD PDF HERE</a></li>
 										</ul>
 									</div>
 									<span class="image object">
